--- a/testing_framework/graphical_syntax/org.etsi.mts.tdl.graphical.viewpoint/build.properties
+++ b/testing_framework/graphical_syntax/org.etsi.mts.tdl.graphical.viewpoint/build.properties
@@ -1,12 +1,10 @@
 source.. = src/
-output.. = bin/
+output.. = target/classes/
 bin.includes = .,\
                META-INF/,\
                description/,\
                extension.ecore,\
                icons/,\
                images/,\
-               plugin.xml,\
-               plugin.properties
+               plugin.xml
 customBuildCallbacks = build.acceleo
-jre.compilation.profile = JavaSE-1.8
